RESOLVED FIXED30748
Missing images at 350.org due to wrong URLs
https://bugs.webkit.org/show_bug.cgi?id=30748
Summary Missing images at 350.org due to wrong URLs
mitz
Reported 2009-10-24 11:58:06 PDT
At <http://www.350.org/>, all images in the slideshow are broken. The Web Inspector shows that their src attribute values are of the form <http://www.350.org/http://350.cdn.advomatic.com/sites/all/files/slides/georgetown_guyana_school.jpg>, whereas the correct URL for the image is of the form <http://350.cdn.advomatic.com/sites/all/files/slides/georgetown_guyana_school.jpg>. The images are displayed correctly in Firefox (and Firebug shows them to have the correct src).
Attachments
Reduction (164 bytes, text/html)
2009-10-24 12:10 PDT, mitz
no flags
Use deprecatedParseURL() in getURLAttribute (4.37 KB, patch)
2009-10-24 13:28 PDT, mitz
no flags
Use deprecatedParseURL() in getURLAttribute() (5.50 KB, patch)
2009-10-24 13:41 PDT, mitz
sam: review+
mitz
Comment 1 2009-10-24 12:10:01 PDT
Created attachment 41788 [details] Reduction
mitz
Comment 2 2009-10-24 12:16:57 PDT
Both Firefox and Opera print 'true' for the reduction.
mitz
Comment 3 2009-10-24 13:28:22 PDT
Created attachment 41793 [details] Use deprecatedParseURL() in getURLAttribute
mitz
Comment 4 2009-10-24 13:41:14 PDT
Created attachment 41795 [details] Use deprecatedParseURL() in getURLAttribute()
mitz
Comment 5 2009-10-24 15:16:56 PDT
Darin Adler
Comment 6 2009-10-25 17:21:49 PDT
If stripping whitespace is what's needed, then I wish we would do just that rather than deprecatedParseURL, but I suppose it's best to be consistent :-(
mitz
Comment 7 2009-10-25 17:31:28 PDT
(In reply to comment #6) > If stripping whitespace is what's needed, then I wish we would do just that > rather than deprecatedParseURL, but I suppose it's best to be consistent :-( I didn’t know exactly what king of cleanup was needed, so I just went with what the loader and the Objective-C bindings were already doing. deprecatedParseURL() is almost certainly wrong, and I would have added a FIXME in all three call sites if it weren’t already named “deprecated”.
Note You need to log in before you can comment on or make changes to this bug.