Missing images at 350.org due to wrong URLs https://bugs.webkit.org/show_bug.cgi?id=30748

Reviewed by Sam Weinig.

WebCore:

Test: fast/dom/HTMLImageElement/parse-src.html

* dom/Element.cpp:
(WebCore::Element::getURLAttribute): Pass the attribute value through deprecateParseURL().
This matches what the Objective-C bindings do, as well as what HTMLImageLoader::sourceURI()
and SVGImageLoader::sourceURI() do.

LayoutTests:

* fast/dom/HTMLImageElement/parse-src-expected.txt: Added.
* fast/dom/HTMLImageElement/parse-src.html: Added.
* fast/dom/HTMLImageElement/script-tests: Added.
* fast/dom/HTMLImageElement/script-tests/TEMPLATE.html: Copied from LayoutTests/fast/dom/Document/script-tests/TEMPLATE.html.
* fast/dom/HTMLImageElement/script-tests/parse-src.js: Added.



Canonical link: https://commits.webkit.org/41476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50029 268f45cc-cd09-0410-ab3c-d52691b4dbfc